<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/musicMainLayout" android:background="@drawable/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentLeft="true">
        <TextView android:textSize="9.0sp" android:textColor="@color/tab_indicator_text" android:gravity="center_horizontal" android:id="@id/change_tab" android:background="@drawable/bg_chanage_library" android:paddingTop="15.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="64.0dip" android:layout_height="71.0dip" android:layout_marginTop="-1.0dip" android:layout_marginBottom="-1.0dip" android:text="@string/changer_menu" android:scrollHorizontally="true" android:singleLine="true" android:drawableTop="@drawable/tab_library_change_on" android:marqueeRepeatLimit="marquee_forever" />
        <TextView android:textSize="9.0sp" android:textColor="@color/tab_indicator_text" android:gravity="center_horizontal" android:id="@id/songs_tab" android:background="@drawable/bg_chanage_library" android:paddingTop="15.0dip" android:layout_width="64.0dip" android:layout_height="71.0dip" android:layout_marginTop="-1.0dip" android:layout_marginBottom="-1.0dip" android:text="@string/songs_menu" android:drawableTop="@drawable/tab_library_song_on" />
        <TextView android:textSize="9.0sp" android:textColor="@color/tab_indicator_text" android:gravity="center_horizontal" android:id="@id/albums_tab" android:background="@drawable/bg_chanage_library" android:paddingTop="15.0dip" android:layout_width="64.0dip" android:layout_height="71.0dip" android:layout_marginTop="-1.0dip" android:layout_marginBottom="-1.0dip" android:text="@string/albums_menu" android:drawableTop="@drawable/tab_library_album_on" />
        <TextView android:textSize="9.0sp" android:textColor="@color/tab_indicator_text" android:gravity="center_horizontal" android:id="@id/artists_tab" android:background="@drawable/bg_chanage_library" android:paddingTop="15.0dip" android:layout_width="64.0dip" android:layout_height="71.0dip" android:layout_marginTop="-1.0dip" android:layout_marginBottom="-1.0dip" android:text="@string/artists_menu" android:drawableTop="@drawable/tab_library_artist_on" />
    </LinearLayout>
    <ImageView android:background="@color/red" android:layout_width="2.0dip" android:layout_height="fill_parent" android:layout_marginLeft="62.0dip" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="65.0dip" android:layout_alignParentRight="true">
        <LinearLayout android:gravity="center" android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_change" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/iv_sd" android:background="@drawable/btn_sdcard" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <ImageView android:id="@id/iv_usb" android:background="@drawable/btn_udisk" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <ImageView android:id="@id/iv_hd" android:background="@drawable/btn_harddisk" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_vertical" android:id="@id/ll_songs" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ListView android:id="@id/lv_songs" android:fadingEdge="none" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scrollingCache="false" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_vertical" android:id="@id/ll_albums" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <GridView android:layout_gravity="center" android:id="@id/gv_albums" android:layout_width="wrap_content" android:layout_height="wrap_content" android:listSelector="@*android:color/background_dark" android:verticalSpacing="1.0dip" android:stretchMode="columnWidth" android:numColumns="3" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_vertical" android:id="@id/ll_artists" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <GridView android:layout_gravity="center" android:id="@id/gv_artists" android:layout_width="wrap_content" android:layout_height="wrap_content" android:listSelector="@*android:color/background_dark" android:verticalSpacing="1.0dip" android:stretchMode="columnWidth" android:numColumns="3" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_vertical" android:id="@id/ll_nocontent" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="27.0sp" android:textColor="@color/tab_indicator_text" android:gravity="center" android:id="@id/tv_nocontent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/nocontent" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true">
        <ImageButton android:id="@id/ib_now_playing" android:background="@drawable/bg_now_playing" android:layout_width="wrap_content" android:layout_height="fill_parent" />
    </LinearLayout>
</RelativeLayout>